--- a/app/src/main/res/layout/content_retrofit.xml
+++ b/app/src/main/res/layout/content_retrofit.xml
@@ -57,7 +57,8 @@
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:contentDescription="imgPreView"/>
 
         <VideoView
             android:id="@+id/videoPerView"
