--- a/app/src/main/res/layout/content_retrofit.xml
+++ b/app/src/main/res/layout/content_retrofit.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/llPost"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -52,20 +52,26 @@
                 android:inputType="number" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imgPreView"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            android:contentDescription="imgPreView"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <VideoView
-            android:id="@+id/videoPerView"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:visibility="gone"/>
+            <ImageView
+                android:id="@+id/imgPreView"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center"
+                android:contentDescription="imgPreView"
+                android:scaleType="fitXY" />
+
+            <VideoView
+                android:id="@+id/videoPerView"
+                android:layout_width="240dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center" />
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/tvPath"
